@@ -1,2 +1,2 @@
   <h1>title1</h1>
-  <p>Lorem Ipsum.</p>  <p id="bookNavigation"> <a href="plink|Test:">Index</a> <a href="plink|Test:(page=slug2)">Next >></a></p>
+  <p>Lorem Ipsum. Dota.</p>  <p id="bookNavigation"> <a href="plink|Test:">Index</a> <a href="plink|Test:(page=slug2)">Next >></a></p>
