@@ -1,1 +1,1 @@
-  <p>{$var}</p>
+  <p>{$var1} {$var2}</p>
