@@ -2,6 +2,7 @@ Version 1.2.0+dev
 - added missing getter and setter for BookControl::$lang
 - made it possible to pass translator to BookControl via constructor (it is optional)
 - made BookControl non-abstract, added real property $pages
+- added event onRender for BookControl
 
 Version 1.2.0
 - used message catalogue for translation by default
